# piscem-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: CanonicalKmer.hpp  CanonicalKmerIterator.hpp  FastxParser.hpp  FastxParserThreadUtils.hpp  Kmer.hpp  basic_contig_table.hpp  bit_vector_iterator.hpp  buckets.hpp  defaults.hpp  dictionary.hpp  equivalence_class_map.hpp  hit_searcher.hpp  info.cpp  mapping_util.hpp  meta_info.hpp  minimizers.hpp  poison_table.hpp  projected_hits.hpp  ref_sig_info.hpp  reference_index.hpp  streaming_query.hpp  util.hpp  util_piscem.hpp  weights.hpp
include/builder/: build.cpp  build_backup.cpp  build_index.hpp  build_skew_index.hpp  parse_file.hpp  util.hpp
include/gz/: zip_stream.hpp
include/libradicl/: Alignment_Record.hpp  Buffer.hpp  Byte_Array.hpp  Header.hpp  RAD_Writer.hpp  Read_Record.hpp  Tags.hpp  Type.hpp
include/mapping/: utils.hpp  utils_bin.hpp
include/parallel_hashmap/: phmap_dump.h
include/query/: contig_info_query_canonical_parsing.cpp  streaming_query_canonical_parsing.hpp
include/rad/: rad_header.hpp  rad_writer.hpp  util.hpp
include/sc/: sc_protocol.hpp  util.hpp
include/spdlog_piscem/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
include/spdlog_piscem/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
include/spdlog_piscem/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
include/spdlog_piscem/fmt/: bin_to_hex.h  chrono.h  compile.h  fmt.h  ostr.h  ranges.h  xchar.h
include/spdlog_piscem/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
script/: merge_into_develop.sh
src/: FastxParser.cpp  bench.cpp  build.cpp  build_contig_table.cpp  build_runner.cpp  check.cpp  check_overlap.cpp  hit_searcher.cpp  index_evaluator.cpp  make_ref_length.cpp  mapper.cpp  permute.cpp  pesc.cpp  pesc_bulk.cpp  pesc_bulk_runner.cpp  pesc_runner.cpp  pesc_sc.cpp  pesc_sc_atac.cpp  pesc_sc_atac_runner.cpp  pesc_sc_runner.cpp  poison_read_filter.cpp  poison_table_build_runner.cpp  poison_table_builder.cpp  query.cpp  temp.cpp  test_load.cpp  test_parse_geo.cpp  write_pieces.cpp
src/libradicl/: Buffer.cpp  Byte_Array.cpp  CMakeLists.txt  Header.cpp  RAD_Writer.cpp  Tags.cpp  test.cpp
tests/: test_geom_extractor.cpp
